Found a spelling mistake in resume.tex
found a spelling mistake in resume.tex. i was building a resume like your's Swastik so i noted you made a spelling mistake kindly check it

--- a/resume.tex
+++ b/resume.tex
@@ -224,7 +224,7 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {KCC Insitute of Technology and Management}{Sep. 2022 -- 2026}
+      {KCC Institute of Technology and Management}{Sep. 2022 -- 2026}
       {Bachelor of Technology in Computer Science}{Greater Noida, Uttar Pradesh}
   \resumeSubHeadingListEnd
 
