all: update resume

--- a/resume.tex
+++ b/resume.tex
@@ -1,8 +1,8 @@
 %-------------------------
 % Resume in Latex
-% Author: Swastik Baranwal
-% Based off on: https://github.com/sb2nov/resume
-% License: MIT
+% Author : Jake Gutierrez
+% Based off of: https://github.com/sb2nov/resume
+% License : MIT
 %------------------------
 
 \documentclass[letterpaper,11pt]{article}
@@ -135,11 +135,11 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {\href{https://effective.af/}{Effective AF}}{August 2023 -- October 2023}
+      {\href{https://effective.af/}{Effective·AF}}{August 2023 -- October 2023}
       {Software Engineer Intern}{California, United States · Remote}
       \resumeItemListStart
-        \resumeItem{Worked on adding new features to the Go GUI using \textbf{Gio} Framework.}
-        \resumeItem{Refactored tons of \textbf{CLI} code and \textit{added} new checks and features.}
+        \resumeItem{Worked on adding new features to the Go GUI \textbf{Gio}.}
+        \resumeItem{Refactored tons of \textbf{CLI} code for \textit{better performance} and \textit{error handling} and \textit{added} new checks and features.}
         \resumeItem{Worked with \textbf{Svelte} and \textit{added} a few components like the \textbf{left chat panel}.}
       \resumeItemListEnd
 
@@ -147,10 +147,10 @@
       {\href{https://vlang.io/}{The V Programming Language Organization}}{August 2022 -- Present}
       {Core Developer}{Remote}
       \resumeItemListStart
-        \resumeItem{Working as a \textbf{paid} Open Source Contributor to develop The V Programming Language.}
+        \resumeItem{Working as a \textbf{paid} Open Source Contributor to develop \textbf{The V Programming Language}.}
         \resumeItem{Fixed \textit{several} checker, parser, scanner, and code generation-related issues.}
-        \resumeItem{Implemented \textbf{operator overloading}, \textbf{syntax highlighting for v doc}, \textbf{match branch range expressions with constants}, \textbf{non-string map keys}, etc.}
-        \resumeItem{Documented and coded \textit{several} internal libraries.}
+        \resumeItem{Implemented features like \textbf{operator overloading}, \textbf{syntax highlighting for v doc}, \textbf{match branch range expressions with constants}, \textbf{non-string map keys}, etc.}
+        \resumeItem{Documented and developed \textit{several} internal libraries.}
     \resumeItemListEnd
     
   \resumeSubHeadingListEnd
@@ -164,7 +164,7 @@
           {\textbf{\href{https://github.com/Delta456/box-cli-maker}{Box CLI Maker}} $|$ \emph{Go, ANSI Escape Code, Terminal}}{April 2020}
           \resumeItemListStart
             \resumeItem{Make Highly Customized Boxes for CLI.}
-            \resumeItem{Has around \textbf{400 stars} on GitHub.}
+            \resumeItem{Has \textbf{400+ stars} on GitHub.}
             \resumeItem{\textit{Supports} ANSI, Tabbed, Multi-line and Line Wrapping boxes, 16 Inbuilt Colors and True Color etc.}
             \resumeItem{Used in \textbf{Kubernetes \href{https://github.com/kubernetes/minikube}{minikube}} and \textit{several} other projects.}
             \resumeItem{Featured on \href{https://golangweekly.com/}{\textbf{GoLang} \textbf{Weekly}}\textit{ twice} (\href{https://golangweekly.com/issues/340}{issue 340} and \href{https://golangweekly.com/issues/435}{issue 435}), \href{https://github.blog/2022-12-16-release-radar-nov-2022/}{\textbf{GitHub Radar}}, \href{https://githubindia.com/open-source/projects}{\textbf{GitHub India}} and \href{https://awesome-go.com/}{\textbf{Awesome Go}}.}
@@ -182,7 +182,7 @@
            \resumeItemListStart
             \resumeItem{Generate \textit{Badges} for your apps which are \textbf{CLI-based}.}
             \resumeItem{Made in TypeScript and Deno to learn the new framework and TypeScript in general.}
-            \resumeItem{Used in \textit{several} projects Deno projects.}
+            \resumeItem{Used in \textit{several} Deno projects.}
           \resumeItemListEnd
             \vspace{-13pt}       
           \resumeProjectHeading{\textbf{\href{https://github.com/Delta456/svelte-color-generator}{Svelte Color Generator}} $|$ \emph{JavaScript, Node, ViteJS, Svelte, Vercel, HTML, CSS}}{August 2023}
@@ -202,7 +202,7 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Python, Go, C, C++, V, JavaScript, TypeScript} \\
-     \textbf{Developer Tools}{: VS Code, Intelli J, Git, Vercel, Terminal, Bash, Hex Editor} \\
+     \textbf{Developer Tools}{: VS Code, JetBrains IDEs, Git, Vercel, Terminal, Bash, Hex Editor} \\
      \textbf{Technologies/Frameworks}{: Linux, Svelte, GitHub, Node, Deno} \\
     }}
  \end{itemize}
@@ -212,11 +212,12 @@
 %-----------INVOLVEMENT---------------
 \section{Volunteering / Extracurricular}
             \resumeItemListStart
-                \resumeItem{A Technical Writer at \href{https://dev.to/delta456}{\textbf{Dev.to}}. where I \textit{write} tech articles related to what I learn and do daily, also a moderator for \textbf{C}, \textbf{C++} and \textbf{Go} \textit{language tags}.}
+                \resumeItem{A Technical Writer at \href{https://dev.to/delta456}{\textbf{Dev.to}}, and also work as a moderator for \textbf{C}, \textbf{C++} and \textbf{Go} \textit{language tags}.}
                 \resumeItem{Helps in \textit{organizing events} in Delhi like \textbf{City JS India}, \textbf{PyDelhi Conference} and \textbf{FOSS United}.}
-                \resumeItem{Given \textit{technical talks} in many events especially \textbf{FOSS Hack 3.0} and \textbf{FOSS United Delhi}. All the talks have been given by me \href{https://github.com/Delta456/talks}{so far}. Also, give lightning talks at several conferences.}
-                \resumeItem{Contributes to \textit{several} other open source projects, and has more than \textbf{360+ PRs} done.}
-                \resumeItem{Running an article \textit{series} on \textbf{Modern C++} \href{https://github.com/Delta456/modern_cpp_series}{tutorial} which is aimed for beginners}
+                \resumeItem{Given \textit{technical talks} in many events especially \textbf{FOSS Hack 3.0} and \textbf{FOSS United Delhi} and lightning talks at several conferences.}
+                \resumeItem{Contributes to \textit{several} other open source projects, and has \textbf{400+ PRs} done.}
+                \resumeItem{Running a beginner-oriented article \textit{\href{https://github.com/Delta456/modern_cpp_series}{series}} on \textbf{C++}}
+                \resumeItem{Part of NixOS \textit{(nixpkg-maintainers)} and catppuccin team and contribute to their projects }
             \resumeItemListEnd
 
             
@@ -224,8 +225,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {KCC Insitute of Technology and Management}{Sep. 2022 -- 2026}
-      {Bachelor of Technology in Computer Science}{Greater Noida, Uttar Pradesh}
+      {KCC Institute of Technology and Management}{Sep. 2022 -- 2026}
+      {Bachelors of Technology in Computer Science}{Greater Noida, Uttar Pradesh}
   \resumeSubHeadingListEnd
 
 \end{document}
