--- a/resume.tex
+++ b/resume.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Author : Jake Gutierrez
+% Original Author : Jake Gutierrez
 % Based off of: https://github.com/sb2nov/resume
 % License : MIT
 %------------------------
@@ -124,6 +124,7 @@
 
 \begin{center}
     {\Huge \scshape Swastik Baranwal} \\ \vspace{1pt}
+    \small ~ \href{https://swastik.is-a.dev}{\raisebox{-0.2\height}\faLink\  \underline{swastik.is-a.dev}} ~
     \small ~ \href{mailto:swstkbaranwal@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{swstkbaranwal@gmail.com}} ~ 
     \href{https://linkedin.com/in/swastik-baranwal/}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/swastik-baranwal}}  ~
     \href{https://github.com/Delta456}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/Delta456}}
@@ -135,22 +136,22 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {\href{https://effective.af/}{Effective·AF}}{August 2023 -- October 2023}
+          {\href{https://vlang.io/}{The V Programming Language Organization}}{August 2022 -- Present}
+      {Core Developer}{Remote}
+      \resumeItemListStart
+        \resumeItem{Working as a paid \textbf{part-time} open source developer for \textbf{The V Programming Language}.}
+        \resumeItem{Fixed \textit{several} checker, parser, scanner, and code generation-related issues.}
+        \resumeItem{Implemented features like \textbf{operator overloading}, \textbf{syntax highlighting for v doc}, \textbf{match branch range expressions with constants}, \textbf{non-string map keys}, etc.}
+        \resumeItem{Documented and developed \textit{several} internal libraries.}
+      \resumeItemListEnd
+
+    \resumeSubheading
+          {\href{https://effective.af/}{Effective·AF}}{August 2023 -- October 2023}
       {Software Engineer Intern}{California, United States · Remote}
       \resumeItemListStart
         \resumeItem{Worked on adding new features to the Go GUI \textbf{Gio}.}
         \resumeItem{Refactored tons of \textbf{CLI} code for \textit{better performance} and \textit{error handling} and \textit{added} new checks and features.}
         \resumeItem{Worked with \textbf{Svelte} and \textit{added} a few components like the \textbf{left chat panel}.}
-      \resumeItemListEnd
-
-    \resumeSubheading
-      {\href{https://vlang.io/}{The V Programming Language Organization}}{August 2022 -- Present}
-      {Core Developer}{Remote}
-      \resumeItemListStart
-        \resumeItem{Working as a \textbf{paid} Open Source Contributor to develop \textbf{The V Programming Language}.}
-        \resumeItem{Fixed \textit{several} checker, parser, scanner, and code generation-related issues.}
-        \resumeItem{Implemented features like \textbf{operator overloading}, \textbf{syntax highlighting for v doc}, \textbf{match branch range expressions with constants}, \textbf{non-string map keys}, etc.}
-        \resumeItem{Documented and developed \textit{several} internal libraries.}
     \resumeItemListEnd
     
   \resumeSubHeadingListEnd
@@ -202,8 +203,8 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Python, Go, C, C++, V, JavaScript, TypeScript} \\
-     \textbf{Developer Tools}{: VS Code, JetBrains IDEs, Git, Vercel, Terminal, Bash, Hex Editor} \\
-     \textbf{Technologies/Frameworks}{: Linux, Svelte, GitHub, Node, Deno} \\
+     \textbf{Developer Tools}{: VS Code, JetBrains IDEs, Git, Vercel, Bash, Hex Editor, Makefile} \\
+     \textbf{Technologies/Frameworks}{: Linux, Svelte, Node, Deno, SQL} \\
     }}
  \end{itemize}
  \vspace{-16pt}
@@ -212,12 +213,12 @@
 %-----------INVOLVEMENT---------------
 \section{Volunteering / Extracurricular}
             \resumeItemListStart
-                \resumeItem{A Technical Writer at \href{https://dev.to/delta456}{\textbf{Dev.to}}, and also work as a moderator for \textbf{C}, \textbf{C++} and \textbf{Go} \textit{language tags}.}
-                \resumeItem{Helps in \textit{organizing events} in Delhi like \textbf{City JS India}, \textbf{PyDelhi Conference} and \textbf{FOSS United}.}
-                \resumeItem{Given \textit{technical talks} in many events especially \textbf{FOSS Hack 3.0} and \textbf{FOSS United Delhi} and lightning talks at several conferences.}
-                \resumeItem{Contributes to \textit{several} other open source projects, and has \textbf{400+ PRs} done.}
+                \resumeItem{A technical writer at \href{https://dev.to/delta456}{\textbf{Dev.to}}, and also work as a moderator for \textbf{C}, \textbf{C++} and \textbf{Go} \textit{language tags}.}
+                \resumeItem{Helps in \textit{organizing events} in Delhi with \textbf{City JS India}, \textbf{PyDelhi Conference} and \textbf{FOSS United}.}
+                \resumeItem{Given technical talks in many events and lightning talks at several conferences.}
                 \resumeItem{Running a beginner-oriented article \textit{\href{https://github.com/Delta456/modern_cpp_series}{series}} on \textbf{C++}}
-                \resumeItem{Part of NixOS \textit{(nixpkg-maintainers)} and catppuccin team and contribute to their projects }
+                \resumeItem{Part of NixOS (nixpkg-maintainers) and catppuccin team and contribute to their projects }
+                \resumeItem{\textbf{CFP} Reviewer for \textbf{GopherCon} 2024}
             \resumeItemListEnd
 
             
