all: update resume

--- a/resume.tex
+++ b/resume.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Original Author : Jake Gutierrez
+% Author : Jake Gutierrez
 % Based off of: https://github.com/sb2nov/resume
 % License : MIT
 %------------------------
@@ -165,7 +165,7 @@
           {\textbf{\href{https://github.com/Delta456/box-cli-maker}{Box CLI Maker}} $|$ \emph{Go, ANSI Escape Code, Terminal}}{April 2020}
           \resumeItemListStart
             \resumeItem{Make Highly Customized Boxes for CLI.}
-            \resumeItem{Has \textbf{400+ stars} on GitHub.}
+            \resumeItem{Has \textbf{500+ stars} on GitHub.}
             \resumeItem{\textit{Supports} ANSI, Tabbed, Multi-line and Line Wrapping boxes, 16 Inbuilt Colors and True Color etc.}
             \resumeItem{Used in \textbf{Kubernetes \href{https://github.com/kubernetes/minikube}{minikube}} and \textit{several} other projects.}
             \resumeItem{Featured on \href{https://golangweekly.com/}{\textbf{GoLang} \textbf{Weekly}}\textit{ twice} (\href{https://golangweekly.com/issues/340}{issue 340} and \href{https://golangweekly.com/issues/435}{issue 435}), \href{https://github.blog/2022-12-16-release-radar-nov-2022/}{\textbf{GitHub Radar}}, \href{https://githubindia.com/open-source/projects}{\textbf{GitHub India}} and \href{https://awesome-go.com/}{\textbf{Awesome Go}}.}
@@ -219,6 +219,7 @@
                 \resumeItem{Running a beginner-oriented article \textit{\href{https://github.com/Delta456/modern_cpp_series}{series}} on \textbf{C++}}
                 \resumeItem{Part of NixOS (nixpkg-maintainers) and catppuccin team and contribute to their projects }
                 \resumeItem{\textbf{CFP} Reviewer for \textbf{GopherCon} 2024}
+                \resumeItem{Featured on \textbf{\href{https://www.youtube.com/watch?v=gs8FFp0rAbk}{GitHub Open Source Friday}} episode}
             \resumeItemListEnd
 
             
