--- a/resume.tex
+++ b/resume.tex
@@ -135,23 +135,31 @@
 \section{Experience}
   \resumeSubHeadingListStart
 
+  \resumeSubheading
+          {\href{https://www.lambdatest.com/}{LambdaTest}}{August 2024 -- Present}
+      {Software Engineer (Open Source) Intern}{Noida, Uttar Pradesh · Hybrid}
+      \resumeItemListStart
+        \resumeItem{Contributing to open-source testing frameworks like \textbf{Selenium} and \textbf{Appium}}
+      \resumeItemListEnd
+
     \resumeSubheading
           {\href{https://vlang.io/}{The V Programming Language Organization}}{August 2022 -- Present}
       {Core Developer}{Remote}
       \resumeItemListStart
-        \resumeItem{Working as a paid \textbf{part-time} open source developer for \textbf{The V Programming Language}.}
-        \resumeItem{Fixed \textit{several} checker, parser, scanner, and code generation-related issues.}
+        \resumeItem{Working as a paid \textbf{part-time} open-source developer for \textbf{The V Programming Language}.}
+        \resumeItem{Fixed \textit{several} checker, parser, scanner, and code generation-related issues in the compiler.}
         \resumeItem{Implemented features like \textbf{operator overloading}, \textbf{syntax highlighting for v doc}, \textbf{match branch range expressions with constants}, \textbf{non-string map keys}, etc.}
-        \resumeItem{Documented and developed \textit{several} internal libraries.}
+        \resumeItem{Documented and developed \textit{several} internal libraries of the language.}
       \resumeItemListEnd
 
     \resumeSubheading
           {\href{https://effective.af/}{Effective·AF}}{August 2023 -- October 2023}
       {Software Engineer Intern}{California, United States · Remote}
       \resumeItemListStart
-        \resumeItem{Worked on adding new features to the Go GUI \textbf{Gio}.}
-        \resumeItem{Refactored tons of \textbf{CLI} code for \textit{better performance} and \textit{error handling} and \textit{added} new checks and features.}
-        \resumeItem{Worked with \textbf{Svelte} and \textit{added} a few components like the \textbf{left chat panel}.}
+        \resumeItem{Worked on adding new features like  using the Go GUI framework \textbf{Gio}.}
+        \resumeItem{Refactored tons of \textbf{CLI} code for \textit{better usability}.}
+        \resumeItem{Added \textit{error handling} and \textit{added} new checks and features to improve the functionality.}
+        \resumeItem{Worked with \textbf{Svelte} and \textit{made} components like \textbf{left chat panel} which helps to navigate chats.}
     \resumeItemListEnd
     
   \resumeSubHeadingListEnd
@@ -178,14 +186,7 @@
             \resumeItem{One of the \textbf{core developers} of the language.}
             \resumeItem{Fixed \textit{several} checker, parser, scanner, and code generation-related issues and implemented several features.}
           \resumeItemListEnd 
-          \vspace{-13pt}
-          \resumeProjectHeading{\textbf{\href{https://github.com/Delta456/cli_badges}{CLI Badges}} $|$ \emph{Deno, TypeScript, Terminal}}{August 2020}
-           \resumeItemListStart
-            \resumeItem{Generate \textit{Badges} for your apps which are \textbf{CLI-based}.}
-            \resumeItem{Made in TypeScript and Deno to learn the new framework and TypeScript in general.}
-            \resumeItem{Used in \textit{several} Deno projects.}
-          \resumeItemListEnd
-            \vspace{-13pt}       
+          \vspace{-13pt}  
           \resumeProjectHeading{\textbf{\href{https://github.com/Delta456/svelte-color-generator}{Svelte Color Generator}} $|$ \emph{JavaScript, Node, ViteJS, Svelte, Vercel, HTML, CSS}}{August 2023}
           \resumeItemListStart
             \resumeItem{A color generator made in \textbf{Svelte}.}
@@ -214,11 +215,11 @@
 \section{Volunteering / Extracurricular}
             \resumeItemListStart
                 \resumeItem{A technical writer at \href{https://dev.to/delta456}{\textbf{Dev.to}}, and also work as a moderator for \textbf{C}, \textbf{C++} and \textbf{Go} \textit{language tags}.}
-                \resumeItem{Helps in \textit{organizing events} in Delhi with \textbf{City JS India}, \textbf{PyDelhi Conference} and \textbf{FOSS United}.}
+                \resumeItem{Helps in \textit{organize events} in Delhi with \textbf{City JS India}, \textbf{PyDelhi Conference} and \textbf{FOSS United}.}
                 \resumeItem{Given technical talks in many events and lightning talks at several conferences.}
                 \resumeItem{Running a beginner-oriented article \textit{\href{https://github.com/Delta456/modern_cpp_series}{series}} on \textbf{C++}}
-                \resumeItem{Part of NixOS (nixpkg-maintainers) and catppuccin team and contribute to their projects }
-                \resumeItem{\textbf{CFP} Reviewer for \textbf{GopherCon} 2024}
+                \resumeItem{Part of NixOS (nixpkg-maintainers) and catppuccin team}
+                \resumeItem{\textbf{CFP} Reviewer for \textbf{GopherCon USA} 2024}
                 \resumeItem{Featured on \textbf{\href{https://www.youtube.com/watch?v=gs8FFp0rAbk}{GitHub Open Source Friday}} episode}
             \resumeItemListEnd
 
